# tabularis_cloudflare_d1_plugin

./: .gitignore  .tabularium  Cargo.toml  LICENSE  README.md  build.rs  manifest.json  registry.json
.github/workflows/: release.yml
src/: client.rs  coords.rs  error.rs  main.rs  rpc.rs
src/handlers/: crud.rs  ddl.rs  metadata.rs  query.rs
src/utils/: identifiers.rs  mod.rs  pagination.rs  types.rs  values.rs
