[package]
name = "cloudflare-d1-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cloudflare-d1-plugin"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
